--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed | LinkedIn </title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="/icons/favicon.jpg">
+    <link rel="icon" href="icons/favicon.jpg">
 </head>
 <body>
     <div id="navbar">
