--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="navbar">
         <div id="left_navbar">
             <div id="search">
-                <img src="/icons/favicon.jpg" alt="LinkedIn_Logo" id="logo">
+                <img src="icons/favicon.jpg" alt="LinkedIn_Logo" id="logo">
                 <img src="/icons/search.jpg" alt="search" id="search_logo">
                 <input type="text" id="search_bar" name="search" placeholder="Search for people, jobs and more">
             </div>
