--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <div id="left_navbar">
             <div id="search">
                 <img src="icons/favicon.jpg" alt="LinkedIn_Logo" id="logo">
-                <img src="icons/search.jpg" alt="search" id="search_logo">
-                <input type="text" id="search_bar" name="search" placeholder="Search for people, jobs and more">
+                <div>
+                    <img src="icons/search.jpg" alt="search" id="search_logo">
+                    <input type="text" id="search_bar" name="search" placeholder="Search for people, jobs and more">
+                </div>
             </div>
             <div id="navbar_link">
                 <figure>
@@ -23,7 +25,7 @@
                 </figure>
                 <figure>
                     <img src="icons/my network.jpg" alt="" class="network_img">
-                    <figcaption>My Network</figcaption>
+                    <figcaption> My Network </figcaption>
                 </figure>
                 <figure>
                     <img src="icons/jobs.jpg" alt="" class="job_img">
@@ -56,7 +58,6 @@
             </div>
         </div>
     </div>    
-
     <div id="home_page">
         <div id="min_prof">
             <div class="top_border">
@@ -68,7 +69,7 @@
                 <h5>Studied at SPS</h5>
             </div>
             <div id="con">
-                <h5 class="con_font1">Connections</h5><span class="num_con">20</span>
+                <h5 class="con_font1">Connections</h5><span class="num_con"><b>20</b></span>
                 <h5>Find alumni and classmates</h5>
             </div>
             <div id="tools">
@@ -97,6 +98,7 @@
             <div id="post_self">
                 <img src="icons/Screenshot 2022-04-20 at 9.20.08 AM.jpg" alt="" class="post_dp">
                 <input type="text" placeholder="Start a post">
+                <div id="post_self_options">
                 <figure class="post_photo">
                     <img src="icons/pictures.jpg" alt="" >
                     <figcaption>Photo</figcaption>
@@ -113,31 +115,32 @@
                     <img src="icons/write article.jpg" alt="" >
                     <figcaption>Write Article</figcaption>
                 </figure>
+                </div>
                 <hr class="sep1">
-                <h5 class="sort">Sort by: <span><b>Top</b> <img src="icons/Screenshot 2022-04-16 at 7.10.14 PM.jpg" alt=""></span></h5>
-                <div class="feed">
-                    <div class="promoter">
-                        <figure>
-                            <img class="promoter_dp" src="icons/Screenshot 2022-04-20 at 9.21.30 AM.jpg" alt="">
-                            <figcaption><span class="sharer">Vinayak Bansal</span></figcaption> 
-                        </figure>
-                        <img class="dots" src="icons/Screenshot 2022-04-16 at 9.05.57 PM.jpg" alt="">
-                        <hr class="sep2">
-                    </div>
-                    <div class="author">
-                        <figure>
-                            <img class="author_dp"src="icons/Screenshot 2022-04-20 at 9.20.08 AM.jpg" alt="">
-                            <figcaption>
-                                <h5>VINAYAK BANSAL </h5><img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""><span>3rd+</span>
-                                <h6>Chemical Engineering</h6>
-                                <h6>2d <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""></h6><img src="icons/Screenshot 2022-04-16 at 8.57.29 PM.jpg" alt="">
-                            </figcaption>
-                        </figure>
-                        <h3>+ Follow</h3>
-                    </div>
-                    <div class="share">
-                        <div class="content">
-                            <div class="ac_content"><img src="icons/Screenshot 2022-04-20 at 9.30.44 AM.jpg" alt=""></div>
+                <h5 class="sort">Sort by: <span><b>Top</b> <img src="icons/Screenshot 2022-04-16 at 7.10.14 PM.jpg" alt=""></span></h5>       
+            <div class="feed">
+                <div class="promoter">
+                    <figure>
+                        <img class="promoter_dp" src="icons/Screenshot 2022-04-20 at 9.21.30 AM.jpg" alt="">
+                        <span><figcaption><span class="sharer">Vinayak Bansal </span><span>likes this</span> </figcaption></span>
+                    </figure>
+                    <img class="dots" src="icons/Screenshot 2022-04-16 at 9.05.57 PM.jpg" alt="">
+                    <hr class="sep2">
+                </div>
+                <div class="author">
+                    <figure>
+                        <img class="author_dp"src="icons/Screenshot 2022-04-20 at 9.20.08 AM.jpg" alt="">
+                        <figcaption>
+                            <h5>Vinayak Bansal </h5><img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""><span>3rd+</span>
+                            <h6>Chemical Engineering</h6>
+                            <h6>2d <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""></h6><img src="icons/Screenshot 2022-04-16 at 8.57.29 PM.jpg" alt="">
+                        </figcaption>
+                    </figure>
+                    <h3>+ Follow</h3>
+                </div>
+                <div class="share">
+                    <div class="content">
+                        <div class="ac_content"><img src="icons/Screenshot 2022-04-20 at 9.30.44 AM.jpg" alt=""></div>
                             <img src="icons/Screenshot 2022-04-16 at 8.59.28 PM.jpg" alt=""><span>Vinayak Bansal and 100000 others</span><span class="info">120 comments <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 100 shares </span>
                         </div>
                         <hr>
@@ -161,131 +164,37 @@
                         </div>
                     </div>
                 </div>
-                <br>
-                <div class="feed">
-                    <div class="promoter">
-                        <figure>
-                            <img class="promoter_dp" src="icons/Screenshot 2022-04-20 at 9.21.30 AM.jpg" alt="">
-                            <figcaption><span class="sharer">Vinayak Bansal</span></figcaption> 
-                        </figure>
-                        <img class="dots" src="icons/Screenshot 2022-04-16 at 9.05.57 PM.jpg" alt="">
-                        <hr class="sep2">
-                    </div>
-                    <div class="author">
-                        <figure>
-                            <img class="author_dp"src="icons/Screenshot 2022-04-20 at 9.20.08 AM.jpg" alt="">
-                            <figcaption>
-                                <h5>VINAYAK BANSAL </h5><img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""><span>3rd+</span>
-                                <h6>X at Y</h6>
-                                <h6>2d <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""></h6><img src="icons/Screenshot 2022-04-16 at 8.57.29 PM.jpg" alt="">
-                            </figcaption>
-                        </figure>
-                        <h3>+ Follow</h3>
-                    </div>
-                    <div class="share">
-                        <div class="content">
-                            <div class="ac_content"><img src="icons/Screenshot 2022-04-20 at 9.30.44 AM.jpg" alt=""></div>
-                            <img src="icons/Screenshot 2022-04-16 at 8.59.28 PM.jpg" alt=""><span>Vinayak Bansal and 100000 others</span><span class="info">120 comments <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 100 shares </span>
-                        </div>
-                        <hr>
-                        <div class="promote">
-                            <figure class="promote_like">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.16 PM.jpg" alt="">
-                                <figcaption>Like</figcaption>
-                            </figure>
-                            <figure class="promote_comment">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.22 PM.jpg" alt="">
-                                <figcaption>Comment</figcaption>
-                            </figure>
-                            <figure class="promote_share">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.29 PM.jpg" alt="">
-                                <figcaption>Share</figcaption>
-                            </figure>
-                            <figure class="promote_send">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.36 PM.jpg" alt="">
-                                <figcaption>Send</figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="feed">
-                    <div class="promoter">
-                        <figure>
-                            <img class="promoter_dp" src="icons/Screenshot 2022-04-20 at 9.21.30 AM.jpg" alt="">
-                            <figcaption><span class="sharer">Vinayak Bansal</span></figcaption> 
-                        </figure>
-                        <img class="dots" src="icons/Screenshot 2022-04-16 at 9.05.57 PM.jpg" alt="">
-                        <hr class="sep2">
-                    </div>
-                    <div class="author">
-                        <figure>
-                            <img class="author_dp"src="icons/Screenshot 2022-04-20 at 9.20.08 AM.jpg" alt="">
-                            <figcaption>
-                                <h5>VINAYAK</h5><img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""><span>3rd+</span>
-                                <h6>Chemical Engineering</h6>
-                                <h6>2d <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""></h6><img src="icons/Screenshot 2022-04-16 at 8.57.29 PM.jpg" alt="">
-                            </figcaption>
-                        </figure>
-                        <h3>+ Follow</h3>
-                    </div>
-                    <div class="share">
-                        <div class="content">
-                            <div class="ac_content"><img src="icons/Screenshot 2022-04-20 at 9.30.44 AM.jpg" alt=""></div>
-                            <img src="icons/Screenshot 2022-04-16 at 8.59.28 PM.jpg" alt=""><span>Vinayak Bansal and 100000 others</span><span class="info">120 comments <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 100 shares </span>
-                        </div>
-                        <hr>
-                        <div class="promote">
-                            <figure class="promote_like">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.16 PM.jpg" alt="">
-                                <figcaption>Like</figcaption>
-                            </figure>
-                            <figure class="promote_comment">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.22 PM.jpg" alt="">
-                                <figcaption>Comment</figcaption>
-                            </figure>
-                            <figure class="promote_share">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.29 PM.jpg" alt="">
-                                <figcaption>Share</figcaption>
-                            </figure>
-                            <figure class="promote_send">
-                                <img src="icons/Screenshot 2022-04-16 at 9.00.36 PM.jpg" alt="">
-                                <figcaption>Send</figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-                <br>
             </div>
-        </div>
+            <hr>
+        </div>    
     <div id="news">
         <div id="ac_news">
             <h4>LinkedIn News <img src="icons/linkedin news.jpg" alt=""></h4>
-            <figure>
+            <figure class="headlines">
                 <img class="bullet" src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt="">
                 <figcaption><b><h5>Green jobs in demand</h5></b>
                     <h6>1d ago <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 1,025 readers</h6>
                 </figcaption>
             </figure>
-            <figure>
+            <figure class="headlines">
                 <img class="bullet" src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt="">
                 <figcaption><b><h5>Green jobs in demand</h5></b>
                     <h6>1d ago <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 1,025 readers</h6>
                 </figcaption>
             </figure>
-            <figure>
+            <figure class="headlines">
                 <img class="bullet" src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt="">
                 <figcaption><b><h5>Green jobs in demand</h5></b>
                     <h6>1d ago <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 1,025 readers</h6>
                 </figcaption>
             </figure>
-            <figure>
+            <figure class="headlines">
                 <img class="bullet" src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt="">
                 <figcaption><b><h5>Green jobs in demand</h5></b>
                     <h6>1d ago <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 1,025 readers</h6>
                 </figcaption>
             </figure>
-            <figure>
+            <figure class="headlines">
                 <img class="bullet" src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt="">
                 <figcaption><b><h5>Green jobs in demand</h5></b>
                     <h6>1d ago <img src="icons/Screenshot 2022-04-16 at 9.15.05 PM.jpg" alt=""> 1,025 readers</h6>
@@ -309,7 +218,6 @@
             <img src="icons/Screenshot 2022-04-16 at 9.05.57 PM.jpg" alt="">
             <img src="icons/messaging down.jpg" alt="">
             <img src="icons/^ symbol.jpg" alt="">
-
         </div>
     </div>
     
